@@ -1,3 +1,8 @@
+2020-08-28  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_reset_user_password): Add passphrase length
+	check.
+
 2020-08-26  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/ac.c (verify_user_0): Fix for a use case of having
